--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "refine": "refine"
   },
   "dependencies": {
+    "@dilane3/gx": "^1.2.6",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.3",
