--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sharp": "^0.32.1",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
