--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@refinedev/nextjs-router": "^5.1.4",
     "@refinedev/react-hook-form": "^4.1.2",
     "@refinedev/supabase": "^5.0.0",
+    "@types/uuid": "^9.0.2",
     "dayjs": "^1.11.9",
     "next": "^13.0.6",
     "nookies": "^2.5.2",
