--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@types/uuid": "^9.0.2",
     "dayjs": "^1.11.9",
     "next": "^13.0.6",
+    "nextjs-progressbar": "^0.0.16",
     "nookies": "^2.5.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-toastify": "^9.1.3",
     "sharp": "^0.32.1",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
