--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@mui/material": "^5.8.6",
     "@mui/x-data-grid": "^6.6.0",
     "@mui/x-date-pickers": "^6.9.2",
-    "@refinedev/cli": "^2.5.1",
-    "@refinedev/core": "^4.5.8",
-    "@refinedev/inferencer": "^4.0.0",
-    "@refinedev/kbar": "^1.1.0",
-    "@refinedev/mui": "^5.0.0",
+    "@refinedev/cli": "2.7.2",
+    "@refinedev/core": "4.28.0",
+    "@refinedev/inferencer": "4.3.2",
+    "@refinedev/kbar": "1.1.2",
+    "@refinedev/mui": "5.9.0",
     "@refinedev/nextjs-router": "^5.1.4",
     "@refinedev/react-hook-form": "^4.1.2",
     "@refinedev/supabase": "^5.0.0",
